--- a/src/scss/modules/_index.scss
+++ b/src/scss/modules/_index.scss
@@ -6,6 +6,7 @@
 	border-left: 5px solid $color-secondary-accent;
 	background: #3c3c3c;
 	@extend %transition-right;
+	margin-top: 81px;
 }
 
 .img-container {
